apps/network/newt/newt.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: newt-tunnel
  namespace: apps
  annotations:
    checkov.io/skip1: "CKV_K8S_8"
    checkov.io/skip2: "CKV_K8S_9"
    checkov.io/skip3: "CKV_K8S_25"
    checkov.io/skip4: "CKV_K8S_35"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: newt-tunnel
  template:
    metadata:
      labels:
        app: newt-tunnel
    spec:
      automountServiceAccountToken: false
      securityContext:
        runAsNonRoot: true
        runAsUser: 10001
        fsGroup: 20001
      containers:
        - name: newt
          image: fosrl/newt@sha256:85e51cec74001295ea84998aae682c58521ee5b950663792dec98973a52ed840
          imagePullPolicy: Always
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - ALL
              add:
                - CHOWN
            runAsNonRoot: true
            runAsUser: 10001                             
            seccompProfile:
              type: RuntimeDefault 
          resources:
            requests:
              memory: "128Mi"
              cpu:    "100m"
            limits:
              memory: "256Mi"
              cpu:    "200m"
